=======================================================================
                  SIESTA CHANGES: TOP IS MOST RECENT
=======================================================================


** CHANGES ALONG trunk

-----------------------------------------------------------------------
2011-02-25  10:20:00 GMT Alberto Garcia <albertog@icmab.es>   trunk-371
Fixes in pdosxml and denchar

(Ported from siesta-3.0 branch)

*Some compilers might have trouble with the shorthand
array syntax used in the update of data arrays in m_pdos.f90.
The bounds are now explicitly indicated.

(Thanks to Miguel Pruneda)

modified:
  Util/pdosxml/m_pdos.f90

* In 2D wavefunction mode, denchar was printing two blank lines
between coordinate blocks.

modified:
  Util/Denchar/Src/denchar.f  -- removed duplicate 'use' statement
  Util/Denchar/Src/rhoofr.f   -- interblock spacing
  Util/Denchar/Src/wavofr.f   --   "

-----------------------------------------------------------------------
2011-02-18  15:55:00 GMT Alberto Garcia <albertog@icmab.es>   trunk-370
Re-initialize data array in timer routine

Apparently it fixes some strangeness with some compilers.

(by Jose Soler)

modified:
  Src/m_timer.F90

-----------------------------------------------------------------------
2011-02-18  15:50:00 GMT Alberto Garcia <albertog@icmab.es>   trunk-369
Remove mentions to SLEPC

The mentions to SLEPC were fossils from a side branch and they have been
removed.

modified:
  Src/siesta_init.F

-----------------------------------------------------------------------
2011-02-03  11:15:00 GMT Alberto Garcia <albertog@icmab.es>   trunk-368
Incorporation of BSC code: mesh optimization; parallel fdf library

* The ongoing collaboration with the Barcelona Supercomputer Center
(through the department of Computer Applications in Science and
Engineering) has resulted in two new main enhancements:

- New code to improve the load-balance among processors in the